<resources>
    <string name="app_name">StepOn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="about_us">About Us Content…</string>
    <string name="create_a_new_account">Create a new account ?</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="stepon">StepOn</string>
    <string name="menu_paid">Paid</string>
    <string name="nav_diet">Diet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diet_list">Diet List</string>
    <string name="loreum_epsum">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.</string>
    <string name="email">Email</string>
    <string name="payment_detail">Payment Detail</string>

    <string name="logout_user">Logout User</string>

    <style name="ButtonStyle">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:paddingBottom">@dimen/dimen_10dp</item>
        <item name="android:paddingTop">@dimen/dimen_10dp</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textSize">@dimen/dimen_18sp</item>
        <item name="android:background">@drawable/btn_main</item>
        <item name="android:gravity">center</item>
    </style>

    <color name="persian_grey_primary">#616161</color>
    <color name="persian_grey_dark">#424242</color>
    <color name="persian_grey_accent">#9e9e9e</color>



    <string name="log_out_user">Log Out</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="amount_to_pay">Amount to pay : ₹</string>
    <string name="num_ten">10</string>
    <string name="enter_mobile">Enter mobile</string>
    <string name="enter_email">Enter email</string>
    <string name="payment_details">Payment Details</string>

</resources>
