<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bnrone"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <android.support.v4.widget.NestedScrollView
        android:background="@color/color_transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/logos" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:hint="@string/mobile"
               style="@style/etStyleMainLayout">
            <EditText
                android:id="@+id/etMobileReg"
                style="@style/etStyleMain"
                android:hint="@string/mobile" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:hint="@string/email"
                style="@style/etStyleMainLayout">
            <EditText
                android:id="@+id/etEmailReg"
                style="@style/etStyleMain"
                android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                app:passwordToggleEnabled="true"
                android:hint="Password"
                app:passwordToggleTint="@color/colorAccent"
                style="@style/etStyleMainLayout">
            <EditText
                android:id="@+id/etPassReg"
                android:inputType="textPassword"
                style="@style/etStyleMain"
                android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnReg"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom"
                android:textAllCaps="false"
                android:text="@string/registration"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/already_have_an_account_login"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>


    </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>