<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:tContext=".payumoney.PaymentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="22dp"
                android:layout_margin="@dimen/fab_margin"
                app1:cardCornerRadius="@dimen/fab_margin">

                <LinearLayout
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/payment_details"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_18sp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp">

                        <EditText
                            android:id="@+id/email_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/enter_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:nextFocusDown="@+id/card_name_et"
                            android:textColor="@color/payumoney_black"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/mobile_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/mobile_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/enter_mobile"
                            android:imeOptions="actionDone"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:nextFocusDown="@+id/card_name_et"
                            android:textColor="@color/payumoney_black"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView

                            android:text="@string/amount_to_pay"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/color_black"
                            android:textSize="16sp" />
                        <TextView
                            android:id="@+id/amount_et"
                            android:text="@string/num_ten"
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/color_Red"
                            android:textSize="16sp" />
                    </LinearLayout>
                    <Button
                        android:id="@+id/pay_now_button"
                        style="@style/ButtonStyle"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_weight="1"
                        android:textAllCaps="false"
                        android:text="@string/proceed_to_pay" />

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/logout_button"
                        style="@style/ButtonStyle"
                        android:layout_margin="@dimen/dimen_10dp"
                        android:onClick="onClick"
                        android:text="@string/log_out_user" />
                </LinearLayout>
            </android.support.v7.widget.CardView>








        </LinearLayout>
    </ScrollView>

</LinearLayout>